@@ -37,3 +37,4 @@ void yyerrorf(val s, ...);
 void yybadtoken(int tok, val context);
 void end_of_regex(void);
 int yylex(void);
+void parse_init(void);
