@@ -1,5 +1,16 @@
 2011-10-26  Kaz Kylheku  <kaz@kylheku.com>
 
+	Bugfix: prepared_error_message variable needs to be gc-protected.
+
+	* parser.h (parse_init): Declared.
+
+	* parser.l (parse_init): New function.
+
+	* txr.c (main): Call parse_init.
+	(txr_main): No need to gc-protect yyin_stream since parse_init does it.
+
+2011-10-26  Kaz Kylheku  <kaz@kylheku.com>
+
 	Parse error handling improvements.
 
 	* parser.l (prepared_error_message): New static variable.
